Fix selecting steps on mobile with the new overflow change

--- a/src/main/content/css/interactive-guides/main.css
+++ b/src/main/content/css/interactive-guides/main.css
@@ -15,6 +15,7 @@
         height: auto;
         width: 100%;
         overflow: auto;
+        z-index: 5; /* For clicking the steps */
     }
 }
 
